@@ -1,0 +1,6 @@
+username : username
+password : password
+movesfilename : C:\Programmi\WinBoard-4.4.1\WinBoard\provarelay.txt
+remotefilename : live.pgn
+hostname : 127.0.0.1
+delay : 1
